--- a/src/styles/top.css
+++ b/src/styles/top.css
@@ -1,39 +1,34 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;1,200;1,300;1,400;1,600;1,700&display=swap');
+
+* {
 	word-wrap: normal;
+	font-family: 'Nunito', sans-serif;
 }
 
-.container{
-	/* border:1px solid green; */
-	width: 60%;
-	height: 20%;
-}
-.card {
-	/* border: 1px aquamarine solid; */
+.inner-card {
 	border-radius: 5px;
 	width: auto;
-	padding: 1%;
-	
-}
-.picha{
-	background-image: url(../images/realcoder.jpg);
-	background-size: contain;
-	/* background-repeat: no-repeat; */
 }
 
-.complete {
+.card {
 	border: 1px solid green;
 	border-radius: 2px;
 	margin: 5px 0px;
+	width: 60%;
+	height: 20%;
+	border: 1px solid grey;
+	margin: 23px;
 	/* width: fit-content; */
-	
+
 	background-size: 2% 4%;
 }
 
-.easy{
+.easy {
 	font-weight: bold;
 }
 
-.start{
+.start {
 	background-color: black;
 	color: whitesmoke;
 	display: table-cell;
@@ -41,4 +36,23 @@
 	vertical-align: middle;
 	width: 10%;
 	height: 300px;
+	font-family: 'Goldman', cursive;
+	word-spacing: 15px;
+}
+.zero {
+	text-decoration: underline;
+	font-family: inherit;
+}
+
+.k {
+	color: grey;
+}
+.b {
+	font-weight: bold;
+}
+
+.socials{
+	list-style-type: none;
+	display: flex;
+	justify-content: space-around;
 }
